# google-search-plugin

./: Cargo.toml
src/: lib.rs
