[package]
name = "google-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "google_plugin"
crate-type = ["cdylib",'rlib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# quick-search-lib = { git = "https://github.com/quick-search-rs/quick-search-lib" }
quick-search-lib = { path = "../quick-search-lib" }
abi_stable = "0.11.3"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["blocking"] }
urlencoding = "2.1.3"
roxmltree = "0.19.0"
webbrowser = "0.8.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z" 
